--- a/src/private.html
+++ b/src/private.html
@@ -1,4 +1,4 @@
-<a href="private.html">index</a>
-<a href="index.html">private</a>
+<a href="index.html">index</a>
+ <a href="private.html">private</a>
 
 <h1>secret key: abcdefghi</h1>
